<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lgreen"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
           <!-- <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#078A0D"
                android:gravity="center"
                android:text="@string/logout" /> -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Welcome"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/Intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="2sp"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/WelText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/Map"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:contentDescription="@string/Map"
                android:padding="@dimen/activity_vertical_margin"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/map" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/basicInfo"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:padding="@dimen/activity_vertical_margin"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/table"
                android:contentDescription="@string/Map" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Scheme"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/KS"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/KSContent"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:autoLink="web"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/MKM"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/MKMContent"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:autoLink="web"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/FBY"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/FBYContent"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:autoLink="web"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/KSY"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/KSYContent"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:autoLink="web"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/LOAN"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/KCC"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/KCCContent"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2sp"
                android:autoLink="web"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ATL"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/ATLContent"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2sp"
                android:autoLink="web"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/AWCL"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/AWCLContent"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2sp"
                android:autoLink="web"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/FML"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/FMLContent"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2sp"
                android:autoLink="web"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/SPS"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/SPSContent"
                android:textColor="@color/black"
                android:padding="@dimen/activity_vertical_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2sp"
                android:autoLink="web"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
