<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfitCalc"
    android:background="@color/lgreen">

    <TextView
        android:id="@+id/profit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="553dp"
        android:text="@string/profit_calculator"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cost_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="435dp"
        android:ems="10"
        android:hint="@string/enter_cp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/selling_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="352dp"
        android:ems="10"
        android:hint="@string/enter_sp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/no_of_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="261dp"
        android:ems="10"
        android:hint="@string/enter_kg"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="182dp"
        android:hint="@string/profit_will_be"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="96dp"
        android:text="@string/buttn_txt" />

</RelativeLayout>