<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.main.LoginActivity"
android:background="@color/lgreen">

<EditText
    android:id="@+id/email2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_marginEnd="100dp"
    android:layout_marginBottom="480dp"
    android:ems="10"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:importantForAutofill="no"
    />

<EditText
    android:id="@+id/pass2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_marginEnd="100dp"
    android:layout_marginBottom="420dp"
    android:ems="10"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:importantForAutofill="no"/>

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="35dp"
    android:layout_marginEnd="108dp"
    android:layout_marginBottom="322dp"
    android:text="@string/noacc"
    android:textStyle="bold"
    android:textColor="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn2"
    app:layout_constraintVertical_bias="0.011" />

<Button
    android:id="@+id/btn2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="160dp"
    android:layout_marginBottom="355dp"
    android:text="@string/sign_in"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />

<TextView
    android:id="@+id/title2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_marginEnd="130dp"
    android:layout_marginBottom="550dp"
    android:textSize="30sp"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:text="@string/log_in" />
</RelativeLayout>