<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lgreen">

    <EditText
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-11dp"
        android:layout_marginBottom="429dp"
        android:ems="10"
        android:hint="@string/event_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/activity_vertical_margin"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/event_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="329dp"
        android:ems="10"
        android:hint="@string/event_description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="@dimen/activity_vertical_margin"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="216dp"
        android:text="@string/add_event" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="531dp"
        android:backgroundTint="#131314"
        android:text="@string/enter_event_details"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
</RelativeLayout>